创建docker文件部署到云服务器

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,108 @@
-backend/do_next/src/main/resources/application.properties
-logs/do_next.log
+# Maven
+target/
+.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+# 配置文件 - 包含敏感信息，不应提交到版本控制
+**/src/main/resources/application.properties
+**/src/main/resources/application-*.properties
+**/src/main/resources/application.yml
+**/src/main/resources/application-*.yml
+.env
+
+# 日志文件
+logs/
+*.log
+log/
+
+# 数据库文件
+*.db
+*.sqlite
+*.sqlite3
+
+# Docker相关
+docker-compose.override.yml
+.docker/
+
+# IDE配置文件
+### IntelliJ IDEA ###
+.idea/
+*.iws
+*.iml
+*.ipr
+out/
+
+### Eclipse ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+
+### VS Code ###
+.vscode/
+.history/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+# 操作系统文件
+### Windows ###
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+### macOS ###
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+
+### Linux ###
+*~
+.fuse_hidden*
+.Trash-*
+
+# 备份文件
+*.bak
+*.tmp
+*.temp
+*.swp
+*.swo
+*~
+
+# 前端相关（如果将来添加前端项目）
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.yarn-integrity
+
+# 部署相关
+deploy/
+dist/
+*.war
+*.jar
+
+# 测试覆盖率报告
+coverage/
+*.coverage
+.nyc_output
+
+# 系统临时文件
+*.pid
+*.seed
+*.pid.lock
